--- a/qmt/main.css
+++ b/qmt/main.css
@@ -131,9 +131,11 @@ footer .navbar-brand h2 {
   margin: 0 5px;
 }
 
+footer {
+  background: #baa0d8;
+}
 
-
-@media screen and (min-width: 967px) {
+@media screen and (min-width: 968px) {
   .intro-list li {
     flex-direction: row;
     height: 80px;
@@ -179,6 +181,9 @@ footer .navbar-brand h2 {
 
   .intro-list {
     padding: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-end;
     margin: 0 auto;
   }
 
@@ -187,9 +192,50 @@ footer .navbar-brand h2 {
   }
 
   .intro-list li {
-    width: auto;
+    width: 50%;
+    padding: 0 3%;
+    display: flex;
+    justify-content: flex-end;
     text-align: center;
   }
+
+  .container {
+      max-width: 675px;
+  }
+
+}
+
+.btn-primary a {
+  color: white;
+}
+
+.btn-primary a:hover {
+  text-decoration: none;
+}
+
+@media screen and (max-width: 567px) {
+  .intro-list {
+    padding: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    margin: 0 auto;
+  }
+
+  .intro-list svg {
+    margin-right: 10px;
+  }
+
+  .intro-list li {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    text-align: center;
+  }
+
+  .container {
+    max-width: 567px;
+}
 
 }
 
