--- a/qmt/services.css
+++ b/qmt/services.css
@@ -21,7 +21,14 @@
 
 @media screen and (max-width: 1200px) {
   .card {
-    min-height: auto;
+    min-height: 300px;
     margin-top: 30px!important;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .card {
+    min-height: 200px;
+    
   }
 }
