--- a/qmt/main.css
+++ b/qmt/main.css
@@ -1,3 +1,5 @@
+
+
 body {
   font-family: "Josefin Sans", sans-serif;
 }
@@ -120,7 +122,7 @@ footer .navbar-brand h2 {
 
 
 #testimonialsSection i {
-  color: #db5ac6;
+  color: #07f7ff;
 }
 
 #testimonialsSection .button i {
@@ -285,6 +287,13 @@ footer a:hover {
   }
 }
 
+.afterhero {
+  margin-top: -5px;
+}
+
+.carousel-inner {
+  height: 225px;
+}
 @media screen and (min-width: 993px) {
   .jumbotron {
     height: 85vh;
@@ -371,11 +380,25 @@ footer h2 {
     rgba(117, 67, 166, 0.726) 10%,
     rgba(187, 80, 187, 0.781) 50%
   );
-  color: white;
+  color: white!important;
+  padding: 20px;
 }
 
 .card label {
-  color: rgb(46, 46, 46);
+  display: none;
+}
+
+::placeholder {
+  color: rgb(248, 249, 250)!important;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: rgb(248, 249, 250)!important;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: rgb(248, 249, 250)!important;
 }
 
 #topNav i {
