--- a/qmt/main.css
+++ b/qmt/main.css
@@ -439,9 +439,10 @@ body {
   background-attachment: fixed;
   background-repeat: repeat-y;
   background-size: cover;
+  
 }
 
-#firstHook .photoHook {
+#secondHook .photoHook {
   background: linear-gradient(
     to right,
     rgba(53, 200, 211, 0.4) 10%,
@@ -452,12 +453,14 @@ body {
   height: 40vh;
 }
 
-#secondHook .photoHook {
+#firstHook .photoHook {
   background: linear-gradient(
-    to left,
-    rgba(53, 95, 211, 0.5) 10%,
-      rgba(187, 80, 187, 0.5) 50%), url('https://images.unsplash.com/photo-1547413749-dd39525702cd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
-  background-attachment: fixed;
+        to right,
+        rgba(53, 200, 211, 0.4) 10%,
+        rgba(103, 80, 187, 0.4) 50%
+      ),
+      url(mainbg.jpg);
+      background-attachment: fixed;
   background-repeat: repeat-y;
   background-size: cover;
   height: 40vh;
